--- a/src/src/styles/index.css
+++ b/src/src/styles/index.css
@@ -3,29 +3,24 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: "Gilroy";
-  src: url(../assets/fonts/Gilroy-Light.otf);
+  font-family: "CocoSharpL";
+  src: url(../assets/fonts/CocoSharpL-Regular.otf);
 }
 
 @font-face {
-  font-family: "Gilroy";
-  src: url(../assets/fonts/Gilroy-ExtraBold.otf);
+  font-family: "CocoSharpL";
+  src: url(../assets/fonts/CocoSharpL-Light.otf);
+  font-weight: light;
+}
+
+@font-face {
+  font-family: "CocoSharpL";
+  src: url(../assets/fonts/CocoSharpL-Bold.otf);
   font-family: bold;
 }
 
-@font-face {
-  font-family: "Human Sans";
-  src: url(../assets/fonts/HumanSans-Regular.otf);
-}
-
-@font-face {
-  font-family: "Human Sans";
-  src: url(../assets/fonts/HumanSans-Bold.otf);
-  font-weight: bold;
-}
-
 * {
-  font-family: "Human Sans", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 h1,
@@ -34,6 +29,6 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Gilroy", sans-serif;
+  font-family: "CocoSharpL";
   font-weight: bold;
 }
